<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginBottom="15dp"
    android:orientation="vertical"
    tools:context=".view.profile.security.Security_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/profile_ActionMenu_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_backspace_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/profile_ActionMenu_foodType_Back"
            android:text="@string/sSecurity"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sRemember_me"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="8"
            />
        <ImageView
            android:layout_weight="2"
            android:id="@+id/profile_Security_Remember_btnOn_Off"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_toggle_on" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sCode_pin"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_weight="8"
            />
        <ImageView
            android:id="@+id/profile_Security_CodePin_btnOn_Off"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:src="@drawable/ic_toggle_off" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <Button
            android:textColor="@color/white"
            android:id="@+id/profile_Security_btnChangePin"
            android:layout_width="340dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_gree"
            android:text="@string/sChange_pin"
            android:textStyle="bold" />
        <Button
            android:textColor="@color/white"
            android:id="@+id/profile_Security_btnChangePassWord"
            android:layout_width="340dp"
            android:layout_height="52dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_gree"
            android:text="@string/sChange_Password"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>