<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".View.Profile.notification.Notification_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/profile_ActionMenu_Back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_backspace_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/profile_ActionMenu_Back"
            android:text="@string/sNotification"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:text="@string/sGerenal_Notification"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <ImageView
            android:id="@+id/profile_Notification_GerenalNotification_btnOn_Off"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:src="@drawable/ic_toggle_on" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:text="@string/sSpecial_Offers"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <ImageView
            android:id="@+id/profile_Notification_SpecialOffers_btnOn_Off"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:src="@drawable/ic_toggle_off" />

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_gravity="center"
            android:text="@string/sApp_update"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            />
        <ImageView
            android:id="@+id/profile_Notification_AppUpdate_btnOn_Off"
            android:layout_marginLeft="8dp"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="2"
            android:src="@drawable/ic_toggle_on" />

    </LinearLayout>




</LinearLayout>